Alert page spacing fix
- Added a fix that add vertical space between the elements in `alert-section__header`.
- Added `row-gap` to `.alert__controls` so there is space when the buttons wrap up.

--- a/www/docs/style/sass/pages/_alert.scss
+++ b/www/docs/style/sass/pages/_alert.scss
@@ -106,6 +106,10 @@
 }
 
 .alert__controls {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 0.5rem;
   margin-bottom: 1rem;
   form {
       display: inline;
@@ -268,6 +272,7 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 0.5rem;
+  gap: 0.5rem;
 
   button, h2 {
       margin-bottom: 0;
@@ -282,7 +287,7 @@
 
 .alert-section__primary {
     @include grid-column(12, $collapse: true);
-    padding: 1.5em;
+    padding: 1em;
     border-bottom: 1px solid $colour_off_white;
 
     @media (min-width: $medium-screen) {
